[tool.poetry]
name = "repl_python3_ESO-Sign-Up-Bot-REPLIT-1"
version = "0.1.0"
description = ""
authors = ["Dahken <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
